swagger added for likes and followers
